<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multicube</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="android_sax">Android SAX</string>
    <string name="sax">Classic SAX</string>
    <string name="dom">DOM</string>
    <string name="pull">XML Pull</string>
    <string name="home">Home</string>
    <string name="News1">No News</string>
    <string name="News2">No News</string>
    <string name="News3">No News</string>
    <string name="News4">No News</string>
    <string name="News5">No News</string>
    <string name="News6">No News</string>
    <string name="News7">No News</string>
    <string name="News8">No News</string>
    <string name="News9">No News</string>
   
  <string-array name="staffroles_arrays">
        <item>Owners</item>
        <item>Admins</item>
        <item>Developers</item>
        <item>Senior Mods</item>
        <item>Mods</item>
        <item>Helpers</item>
  </string-array> 
  
  <string-array name="Owners">
        <item>CommunityMC</item>
        <item>PxlPanda</item>
        <item>SynHD</item>
  </string-array> 
  <string-array name="Admins">
        <item>chd_</item>
        <item>darthalex99</item>
        <item>Joba97</item>
        <item>TheTwistedGuy</item>
  </string-array> 
  <string-array name="Developers">
        <item>bemacized</item>
        <item>Wouto1997</item>
  </string-array> 
  <string-array name="Senior_Mods">
        <item>LightRod</item>
        <item>Rob_____</item>
        <item>Vidiot1169</item>
  </string-array> 
  <string-array name="Mods">
        <item>Auraid</item>
        <item>babygowow</item>
        <item>BritishGaming94</item>
        <item>celebrir</item>
        <item>goodyear250</item>
        <item>MaGezky</item>
        <item>Manuman1998</item>
        <item>Strykrr</item>
        <item>TofuSword</item>
        <item>wired26</item>
        <item>Wisserd</item>
        <item>XxShamWowGIxX</item>
  </string-array>
  <string-array name="Helpers">
        <item>brcarpy95</item>
        <item>bobevans56</item>
        <item>Creeperboi</item>
        <item>DieNowHo</item>
        <item>Ethan2098</item>
        <item>GreenPie11</item>
        <item>Meian</item>
        <item>Minezbot</item>
        <item>NGOXL1</item>
        <item>pamanfever97</item>
        <item>taddio</item>
  </string-array>     
   
  <string-array name="map_arrays">
        <item>Canyon</item>
        <item>Flat Forest</item>
        <item>Forest Hills</item>
        <item>Hills And Lakes</item>
        <item>Jungle Mountain</item>
        <item>Nordic Islands</item>
        <item>Oasis</item>
  </string-array>
<string-array name="building_arrays">
    
        <item>Town Hall</item>
        <item>Lumber Mill</item>
        <item>Mage tower</item>
        <item>Farm</item>
        <item>Church</item>
        <item>Cathedral</item>
        <item>Scout Tower</item>
        <item>Greenhouse</item>
  </string-array>

  <string-array name="arena_arrays">
        <item>Floating Islands</item>
        <item>Desert Town</item>
        <item>Overgrown</item>
        <item>Death Island</item>
      </string-array>
  <string-array name="superjump_arrays">
        <item>LostCity</item>
        <item>Void</item>
        <item>Ender</item>
        <item>Halloween</item>
        <item>Giant</item>
        <item>Arena</item>
        <item>Cave</item>
        <item>Ocean</item>
        <item>Panda</item>
        <item>Snake</item>
      </string-array>
      <string-array name="spleef_arrays">
        <item>Halloween</item>
        <item>Pixel</item>
        <item>ECO</item>
        <item>Desert</item>
        <item>LostCity</item>
        <item>Haunted</item>
        <item>Wooden</item>
        <item>FloatingForest</item>
        <item>Arena</item>
        <item>Farland</item>
        <item>Cave</item>
        <item>Alley</item>
        <item>TempleOfAngels</item>
        <item>Nether</item>
        <item>Jungle</item>
        <item>Temple</item>
        <item>Thanksgiving</item>
        <item>Pirate</item>
        <item>Wonderland</item>
        <item>IceOver</item>
      </string-array>
    
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="nav_drawer_items">
      
        <item >Home</item>
        <item >Colony Wars</item>
        <item >The Syndicate Games</item> 
        <item >Zombie Escape</item>
        <item >Gun Spleef</item>
        <item >Super Jump</item>
        <item >Snow Speef</item>
        <item >Shop</item>
        <item >Social Network</item>
        <item >Staff</item>
    </string-array>
</resources>